@@ -1,3 +1,12 @@
+2006-04-02  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/gtkmodule.c (init_gtk): GDK_PARENT_RELATIVE constant
+
+	* gtk/gtk-types.c (pygtk_style_helper_setitem): Add support for
+	GDK_PARENT_RELATIVE in style pixmaps.
+
+	Fixes #320248 (Nikos Kouremenos)
+
 2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* codegen/override.py (Overrides.__parse_override): Check and
@@ -10,7 +19,7 @@
 
 	* pangocairo.override: Wrap pango_cairo_context_set_font_options
 	and pango_cairo_context_get_font_options.  Fixes #328108.
-	
+
 	Reviewed by Gustavo Carneiro.
 
 2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
